--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-    <!--configFragment-->
-    <th:block th:fragment="headFragment">
-        <head th:fragment="configFragment">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+    <th:block th:fragment="configFragment">
+        <!--configFragment-->
+        <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,9 +12,7 @@
             <link rel="stylesheet" href="/css/maicons.css">
             <link rel="stylesheet" href="/vendor/owl-carousel/css/owl.carousel.css">
             <link rel="stylesheet" href="/css/theme.css">
-
-
-
         </head>
+
     </th:block>
 </html>
