--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="https://www.thymeleaf.org" xmlns:layout="http://ultraq.net.nz/thymeleaf/layout">
+<html th:fragment="layoutFragment(section)" lang="ko" xmlns:th="https://www.thymeleaf.org" xmlns:layout="http://ultraq.net.nz/thymeleaf/layout">
 
-<!--공통헤더-->
-<th:block th:replace="fragments/config :: configFragment"></th:block>
+    <!--공통헤더-->
+    <th:block th:replace="fragments/config :: configFragment"></th:block>
 
     <body>
         <th:block th:replace="fragments/header :: headerFragment"></th:block>
-        <th:block th:layout:fragment="content"></th:block>
+
+
+        <main th:replace="${section}"></main>
+
+
         <th:block th:replace="fragments/footer :: footerFragment"></th:block>
 
         <th:block th:replace="fragments/script :: scriptFragment"></th:block>
     </body>
 
 </html>
+
+
