--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,194 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html th:replace="layouts/layout :: layoutFragment(~{::main})" lang="ko" xmlns:th="https://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" >
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-  <meta name="copyright" content="MACode ID, https://macodeid.com">
-
-  <title>DigiGram - Free Agency Template</title>
-
-  <link rel="stylesheet" href="/vendor/animate/animate.css">
-
-  <link rel="stylesheet" href="../../../../../../../digigram/assets/css/bootstrap.css">
-
-  <link rel="stylesheet" href="../../../../../../../digigram/assets/css/maicons.css">
-
-  <link rel="stylesheet" href="../../../../../../../digigram/assets/vendor/owl-carousel/css/owl.carousel.css">
-
-  <link rel="stylesheet" href="../../../../../../../digigram/assets/css/theme.css">
-
-</head>
-<body>
-
-  <!-- Back to top button -->
-  <div class="back-to-top"></div>
-
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-      <div class="container">
-        <a href="../../../../../../../digigram/html/index.html" class="navbar-brand">Digi<span class="text-primary">Gram.</span></a>
-
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="navbar-collapse collapse" id="navbarContent">
-          <ul class="navbar-nav ml-lg-4 pt-3 pt-lg-0">
-            <li class="nav-item">
-              <a href="../../../../../../../digigram/html/index.html" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item ">
-              <a href="../../../../../../../digigram/html/about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="../../../../../../../digigram/html/services.html" class="nav-link">Services</a>
-            </li>
-            <li class="nav-item">
-              <a href="../../../../../../../digigram/html/blog.html" class="nav-link">News</a>
-            </li>
-            <li class="nav-item">
-              <a href="../../../../../../../digigram/html/contact.html" class="nav-link">Contact</a>
-            </li>
-          </ul>
-
-          <div class="ml-auto">
-            <a href="#" class="btn btn-outline rounded-pill">로그인</a>
-          </div>
-        </div>
-      </div>
-    </nav>
+<main>
     <div class="page-section">
-      <div class="container text-center">
-         <h2 class="login"><b>로그인</b></h2>
-         <form action="">
-          <div class="row mb-3">
-            <div class="col-sm-5 login-id">
-              <input type="text" class="form-control" placeholder="아이디">
-            </div>
-            <div class="col-sm-5 login-password">
-              <input type="password" class="form-control" placeholder="비밀번호">
-            </div>
-            <div class="col-sm-5 login-btn">
-              <button class=" btn btn-primary btn-block">로그인하기</button>
-            </div>
-            <div class="col-sm-5 login-btn mt-4">
-              <p>SNS 계정 로그인하기</p>
-              <img src="../../../../../../../digigram/assets/img/login/kakaoLogin.png" class="mr-3" width="50" alt="">
-              <img src="../../../../../../../digigram/assets/img/login/naverLogin.png" class="mr-3" width="50" alt="">
-              <img src="../../../../../../../digigram/assets/img/login/googleLogin.png" class="mr-3" width="50" alt="">
-            </div>
-            <div class="col-sm-5 join">
-              <a href="join.html"><h4>간편 회원가입</h4></a>
-            </div>
-          </div>
-        </form>
-      </div>
-      </div>
+        <div class="container text-center">
+            <h2 class="login"><b>로그인</b></h2>
+            <form action="">
+                <div class="row mb-3">
+                    <div class="col-sm-5 login-id">
+                        <input type="text" class="form-control" placeholder="아이디">
+                    </div>
+                    <div class="col-sm-5 login-password">
+                        <input type="password" class="form-control" placeholder="비밀번호">
+                    </div>
+                    <div class="col-sm-5 login-btn">
+                        <button class=" btn btn-primary btn-block">로그인하기</button>
+                    </div>
+                    <div class="col-sm-5 login-btn mt-4">
+                        <p>SNS 계정 로그인하기</p>
+                        <img src="/img/login/kakaoLogin.png" class="mr-3" width="50" alt="">
+                        <img src="/img/login/naverLogin.png" class="mr-3" width="50" alt="">
+                        <img src="/img/login/googleLogin.png" class="mr-3" width="50" alt="">
+                    </div>
+                    <div class="col-sm-5 join">
+                        <a href="/join"><h4>간편 회원가입</h4></a>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-    
+    </div>
+
     <div class="page-section client-section">
-      <div class="container-fluid">
-        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 justify-content-center">
-          <div class="item">
-            <img src="../../../../../../../digigram/assets/img/clients/airbnb.png" alt="">
-          </div>
-          <div class="item">
-            <img src="../../../../../../../digigram/assets/img/clients/google.png" alt="">
-          </div>
-          <div class="item">
-            <img src="../../../../../../../digigram/assets/img/clients/stripe.png" alt="">
-          </div>
-          <div class="item">
-            <img src="../../../../../../../digigram/assets/img/clients/paypal.png" alt="">
-          </div>
-          <div class="item">
-            <img src="../../../../../../../digigram/assets/img/clients/mailchimp.png" alt="">
-          </div>
-        </div>
-      </div> <!-- .container-fluid -->
+        <div class="container-fluid">
+            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 justify-content-center">
+                <div class="item">
+                    <img src="/img/clients/airbnb.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="/img/clients/google.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="/img/clients/stripe.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="/img/clients/paypal.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="/img/clients/mailchimp.png" alt="">
+                </div>
+            </div>
+        </div> <!-- .container-fluid -->
     </div> <!-- .page-section -->
-  </main>
 
-  <footer class="page-footer">
-    <div class="container">
-      <div class="row justify-content-center mb-5">
-        <div class="col-lg-3 py-3">
-          <h3>Digi<span class="text-primary">Gram.</span></h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-
-          <p><a href="#" >digigram@mail.com</a></p>
-          <p><a href="#">+00 1122 3344 5566</a></p>
-        </div>
-        <div class="col-lg-3 py-3">
-          <h5>Quick Links</h5>
-          <ul class="footer-menu">
-            <li><a href="#">How it works</a></li>
-            <li><a href="#">Security</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Report a Bug</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-3 py-3">
-          <h5>About Us</h5>
-          <ul class="footer-menu">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Jobs</a></li>
-            <li><a href="#">Our Teams</a></li>
-            <li><a href="#">Testimonials</a></li>
-            <li><a href="#">News & Press</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-3 py-3">
-          <h5>Subscribe</h5>
-          <form action="#">
-            <input type="text" class="form-control" placeholder="Enter your mail..">
-          </form>
-
-          <div class="sosmed-button mt-4">
-            <a href="#"><span class="mai-logo-facebook-f"></span></a>
-            <a href="#"><span class="mai-logo-twitter"></span></a>
-            <a href="#"><span class="mai-logo-google"></span></a>
-            <a href="#"><span class="mai-logo-linkedin"></span></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-6 py-2">
-          <p id="copyright">&copy; 2020 <a href="https://macodeid.com/">MACode ID</a>. All rights reserved</p>
-        </div>
-        <div class="col-sm-6 py-2 text-right">
-          <div class="d-inline-block px-3">
-            <a href="#">Privacy</a>
-          </div>
-          <div class="d-inline-block px-3">
-            <a href="#">Contact Us</a>
-          </div>
-        </div>
-      </div>
-    </div> <!-- .container -->
-  </footer> <!-- .page-footer -->
-
-
-  <script src="../../../../../../../digigram/assets/js/jquery-3.5.1.min.js"></script>
-
-  <script src="../../../../../../../digigram/assets/js/bootstrap.bundle.min.js"></script>
-
-  <script src="../../../../../../../digigram/assets/vendor/wow/wow.min.js"></script>
-
-  <script src="../../../../../../../digigram/assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
-
-  <script src="../../../../../../../digigram/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-
-  <script src="../../../../../../../digigram/assets/vendor/animateNumber/jquery.animateNumber.min.js"></script>
-
-  <script src="../../../../../../../digigram/assets/js/google-maps.js"></script>
-
-  <script src="../../../../../../../digigram/assets/js/theme.js"></script>
-
-</body>
-</html>
+</main>
