--- a/src/main/resources/templates/menu/men.html
+++ b/src/main/resources/templates/menu/men.html
@@ -1,230 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-  <meta name="copyright" content="MACode ID, https://macodeid.com">
-
-  <title>DigiGram - Free Agency Template</title>
-
-  <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
-
-  <link rel="stylesheet" href="../assets/css/bootstrap.css">
-
-  <link rel="stylesheet" href="../assets/css/maicons.css">
-
-  <link rel="stylesheet" href="../assets/vendor/owl-carousel/css/owl.carousel.css">
-
-  <link rel="stylesheet" href="../assets/css/theme.css">
-
-</head>
-<body>
-
-  <!-- Back to top button -->
-  <div class="back-to-top"></div>
-
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-      <div class="container">
-        <a href="index.html" class="navbar-brand">Digi<span class="text-primary">Gram.</span></a>
-
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="navbar-collapse collapse" id="navbarContent">
-          <ul class="navbar-nav ml-lg-4 pt-3 pt-lg-0">
-            <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="services.html" class="nav-link">Services</a>
-            </li>
-            <li class="nav-item active">
-              <a href="blog.html" class="nav-link">News</a>
-            </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
-            </li>
-          </ul>
-
-          <div class="ml-auto">
-            <a href="#" class="btn btn-outline rounded-pill">로그인</a>
+<html th:replace="layouts/layout :: layoutFragment(~{::main})" lang="ko" xmlns:th="https://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" >
+<main>
+  <div class="page-section bg-light " style="margin-top: 90px;">
+    <div class="container">
+      <div class="owl-carousel wow fadeInUp" id="testimonials">
+        <div class="item">
+          <div class="row align-items-center">
+            <div class="col-md-6 py-3">
+              <div class="testi-image">
+                <img src="/img/product/vantaBlack.jpg" alt="">
+              </div>
+            </div>
+            <div class="col-md-3 py-3">
+              <div class="testi-content">
+                <p>Necessitatibus ipsum magni accusantium consequatur delectus a repudiandae nemo quisquam dolorum itaque, tenetur, esse optio eveniet beatae explicabo sapiente quo.</p>
+                <div class="entry-footer">
+                  <strong>Melvin Platje</strong> &mdash; <span class="text-grey">CEO Slurin Group</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
 
-    <div class="container mt-5">
-      <div class="page-banner">
-        <div class="row justify-content-center align-items-center h-100">
-          <div class="col-md-6">
-            <nav aria-label="Breadcrumb">
-              <ul class="breadcrumb justify-content-center py-0 bg-transparent">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item active">News</li>
-              </ul>
-            </nav>
-            <h1 class="text-center">News</h1>
+        <div class="item">
+          <div class="row align-items-center">
+            <div class="col-md-6 py-3">
+              <div class="testi-image">
+                <img src="/img/person/person_2.jpg" alt="">
+              </div>
+            </div>
+            <div class="col-md-6 py-3">
+              <div class="testi-content">
+                <p>Repudiandae vero assumenda sequi labore ipsum eos ducimus provident a nam vitae et, dolorum temporibus inventore quaerat consectetur quos! Animi, qui ratione?</p>
+                <div class="entry-footer">
+                  <strong>George Burke</strong> &mdash; <span class="text-grey">CEO Letro</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+
       </div>
-    </div>
-  </header>
+    </div> <!-- .container -->
+  </div> <!-- .page-section -->
 
 
-  <main>
-    <div class="page-section">
-      <div class="container">
+  <div class="page-section">
+    <div class="container">
+      <div class="text-center wow fadeInUp">
+        <div class="subhead">Why Choose Us</div>
+        <h2 class="title-section">Your <span class="marked">Comfort</span> is Our Priority</h2>
+        <div class="divider mx-auto"></div>
+      </div>
 
-        
       <div class="row mt-5 text-center">
         <div class="col-lg-4 py-3 wow fadeInUp">
           <div class="display-3">
-            <img src="../assets/img/product/vantaBlack.jpg" width="270" alt="">
+            <img src="/img/product/vantaBlack.jpg" width="350" alt="">
           </div>
-          <div class="text-left mr-2 pl-2">
+          <div class="text-left">
             <h5 ><b><u>피스워커</u></b></h5>
-            <a href="detail.html" >vantaBlack/crop</a>
+            <a href="men/product/vanta" >vantaBlack/crop</a>
             <p><b>23,000</b>원</p>
             <div class="freeShip">무료배송</div>
           </div>
         </div>
         <div class="col-lg-4 py-3 wow fadeInUp">
-          <div class="display-3">
-            <img src="../assets/img/product/vantaBlack.jpg" width="270" alt="">
-          </div>
-          <div class="text-left mr-2 pl-2">
-            <h5 ><b><u>피스워커</u></b></h5>
-            <a href="detail.html" >vantaBlack/crop</a>
-            <p><b>23,000</b>원</p>
-            <div class="freeShip">무료배송</div>
-          </div>
+          <div class="display-3"><span class="mai-shapes"></span></div>
+          <h5>Friendly Prices</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, sit.</p>
         </div>
         <div class="col-lg-4 py-3 wow fadeInUp">
-          <div class="display-3">
-            <img src="../assets/img/product/vantaBlack.jpg" width="270" alt="">
-          </div>
-          <div class="text-left mr-2 pl-2">
-            <h5 ><b><u>피스워커</u></b></h5>
-            <a href="detail.html" >vantaBlack/crop</a>
-            <p><b>23,000</b>원</p>
-            <div class="freeShip">무료배송</div>
-          </div>
+          <div class="display-3"><span class="mai-shapes"></span></div>
+          <h5>No time-confusing</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, sit.</p>
         </div>
       </div>
     </div> <!-- .container -->
-    </div> <!-- .page-section -->
-       
-
-          <div class="col-12 mt-5">
-            <nav aria-label="Page Navigation">
-              <ul class="pagination justify-content-center">
-                <li class="page-item disabled">
-                  <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item active" aria-current="page">
-                  <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="#">Next</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          
-
-        </div>
-  
-      </div>
-    </div>
-  </main>
-
-  <footer class="page-footer">
-    <div class="container">
-      <div class="row justify-content-center mb-5">
-        <div class="col-lg-3 py-3">
-          <h3>Digi<span class="text-primary">Gram.</span></h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-
-          <p><a href="#" >digigram@mail.com</a></p>
-          <p><a href="#">+00 1122 3344 5566</a></p>
-        </div>
-        <div class="col-lg-3 py-3">
-          <h5>Quick Links</h5>
-          <ul class="footer-menu">
-            <li><a href="#">How it works</a></li>
-            <li><a href="#">Security</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Report a Bug</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-3 py-3">
-          <h5>About Us</h5>
-          <ul class="footer-menu">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Jobs</a></li>
-            <li><a href="#">Our Teams</a></li>
-            <li><a href="#">Testimonials</a></li>
-            <li><a href="#">News & Press</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-3 py-3">
-          <h5>Subscribe</h5>
-          <form action="#">
-            <input type="text" class="form-control" placeholder="Enter your mail..">
-          </form>
-
-          <div class="sosmed-button mt-4">
-            <a href="#"><span class="mai-logo-facebook-f"></span></a>
-            <a href="#"><span class="mai-logo-twitter"></span></a>
-            <a href="#"><span class="mai-logo-google"></span></a>
-            <a href="#"><span class="mai-logo-linkedin"></span></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-6 py-2">
-          <p id="copyright">&copy; 2020 <a href="https://macodeid.com/">MACode ID</a>. All rights reserved</p>
-        </div>
-        <div class="col-sm-6 py-2 text-right">
-          <div class="d-inline-block px-3">
-            <a href="#">Privacy</a>
-          </div>
-          <div class="d-inline-block px-3">
-            <a href="#">Contact Us</a>
-          </div>
-        </div>
-      </div>
-    </div> <!-- .container -->
-  </footer> <!-- .page-footer -->
-
-
-  <script src="../assets/js/jquery-3.5.1.min.js"></script>
-
-  <script src="../assets/js/bootstrap.bundle.min.js"></script>
-
-  <script src="../assets/vendor/wow/wow.min.js"></script>
-
-  <script src="../assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
-
-  <script src="../assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-
-  <script src="../assets/vendor/animateNumber/jquery.animateNumber.min.js"></script>
-
-  <script src="../assets/js/google-maps.js"></script>
-
-  <script src="../assets/js/theme.js"></script>
-
-</body>
-</html>
+  </div> <!-- .page-section -->
+</main>
