--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-float">
                 <div class="container">
-                    <a href="index.html" class="navbar-brand">Digi<span class="text-primary">Gram.</span></a>
+                    <a href="/" class="navbar-brand"><span class="text-primary">GOOD</span> Shop</a>
 
                     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
