상세페이지 디자인

--- a/src/main/resources/templates/menu/men.html
+++ b/src/main/resources/templates/menu/men.html
@@ -60,7 +60,7 @@
           </div>
           <div class="text-left">
             <h5 ><b><u>피스워커</u></b></h5>
-            <a href="men/product/vanta" >vantaBlack/crop</a>
+            <a href="/men/vanta" >vantaBlack/crop</a>
             <p><b>23,000</b>원</p>
             <div class="freeShip">무료배송</div>
           </div>
