회원가입 기능

--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -12,6 +12,12 @@
             <link rel="stylesheet" href="/css/maicons.css">
             <link rel="stylesheet" href="/vendor/owl-carousel/css/owl.carousel.css">
             <link rel="stylesheet" href="/css/theme.css">
+
+            <style>
+                .fieldError {
+                    border-color: #bd2130;
+                }
+            </style>
         </head>
 
     </th:block>
