--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,7 @@
                                 <a href="/tech" class="nav-link">Tech</a>
                             </li>
                             <li class="nav-item">
-                                <a href="services.html" class="nav-link">Services</a>
+                                <a href="/item/new" class="nav-link">Upload</a>
                             </li>
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">Contact</a>
