--- a/src/main/resources/templates/menu/product/newitem.html
+++ b/src/main/resources/templates/menu/product/newitem.html
@@ -2,6 +2,38 @@
 <html lang="en" th:replace="layouts/layout :: layoutFragment(~{::main})" xmlns:th="https://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <main>
-    <form action="/item/new" method="post" th:object="${productForm}">
-    </form>
+    <div class="page-section">
+        <div class="container">
+            <h2 class="login"><b>상품등록</b></h2>
+            <form action="/item/new" method="post" th:object="${productForm}">
+                <div class="row mb-3">
+                    <div class="col-sm-4 login-id">
+                        <input type="text" class="form-control" th:field="*{pdct_name}" placeholder="상품이름" th:class="${#fields.hasErrors('pdct_name')} ? 'form-control fieldError' : 'form-control'">
+                        <p th:if="${#fields.hasErrors('pdct_name')}" th:errors="*{pdct_name}">Incorrect date</p>
+                    </div>
+                    <div class="col-sm-4 login-id">
+                        <input type="text" class="form-control" th:field="*{pdct_price}" placeholder="상품가격" th:class="${#fields.hasErrors('pdct_price')}  ? 'form-control fieldError' : 'form-control'">
+                        <p th:if="${#fields.hasErrors('pdct_price')}" th:errors="*{pdct_price}">Incorrect date</p>
+                    </div>
+                    <div class="col-sm-4 login-id">
+                        <input type="text" class="form-control" th:field="*{pdct_quantity}" placeholder="상품재고" th:class="${#fields.hasErrors('pdct_quantity')}  ? 'form-control fieldError' : 'form-control'">
+                        <p th:if="${#fields.hasErrors('pdct_quantity')}" th:errors="*{pdct_quantity}">Incorrect date</p>
+                    </div>
+                    <div class="col-sm-4 login-id">
+                        <input type="image" class="form-control" th:field="*{pdct_image}" placeholder="상품이름" th:class="${#fields.hasErrors('pdct_image')}  ? 'form-control fieldError' : 'form-control'">
+                        <p th:if="${#fields.hasErrors('pdct_image')}" th:errors="*{pdct_image}">Incorrect date</p>
+                    </div>
+                    <div class="col-sm-4 login-id">
+                        <input type="image" class="form-control" th:field="*{detail_image}" placeholder="상세이미지" th:class="${#fields.hasErrors('detail_image')}  ? 'form-control fieldError' : 'form-control'">
+                        <p th:if="${#fields.hasErrors('detail_image')}" th:errors="*{detail_image}">Incorrect date</p>
+                    </div>
+                    <div class="col-sm-4 login-id">
+                        <input type="text" class="form-control" th:field="*{pdct_detail}" placeholder="상세 설명" th:class="${#fields.hasErrors('pdct_detail')}  ? 'form-control fieldError' : 'form-control'">
+                        <p th:if="${#fields.hasErrors('pdct_detail')}" th:errors="*{pdct_detail}">Incorrect date</p>
+                    </div>
+                    <button class="btn btn-primary" type="submit">제출</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </main>
