--- a/src/main/resources/templates/menu/product/newitem.html
+++ b/src/main/resources/templates/menu/product/newitem.html
@@ -5,7 +5,7 @@
     <div class="page-section">
         <div class="container">
             <h2 class="login"><b>상품등록</b></h2>
-            <form action="/item/new" method="post" th:object="${productForm}">
+            <form action="/item/new" method="post" th:object="${productForm}" enctype="multipart/form-data">
                 <div class="row mb-3">
                     <div class="col-sm-4 login-id">
                         <input type="text" class="form-control" th:field="*{pdct_name}" placeholder="상품이름" th:class="${#fields.hasErrors('pdct_name')} ? 'form-control fieldError' : 'form-control'">
@@ -20,11 +20,11 @@
                         <p th:if="${#fields.hasErrors('pdct_quantity')}" th:errors="*{pdct_quantity}">Incorrect date</p>
                     </div>
                     <div class="col-sm-4 login-id">
-                        <input type="image" class="form-control" th:field="*{pdct_image}" placeholder="상품이름" th:class="${#fields.hasErrors('pdct_image')}  ? 'form-control fieldError' : 'form-control'">
+                        <input type="file" class="form-control" th:field="*{pdct_image}" placeholder="상품이름" th:class="${#fields.hasErrors('pdct_image')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_image')}" th:errors="*{pdct_image}">Incorrect date</p>
                     </div>
                     <div class="col-sm-4 login-id">
-                        <input type="image" class="form-control" th:field="*{detail_image}" placeholder="상세이미지" th:class="${#fields.hasErrors('detail_image')}  ? 'form-control fieldError' : 'form-control'">
+                        <input type="file" class="form-control" th:field="*{detail_image}" placeholder="상세이미지" th:class="${#fields.hasErrors('detail_image')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('detail_image')}" th:errors="*{detail_image}">Incorrect date</p>
                     </div>
                     <div class="col-sm-4 login-id">
