--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,7 +18,7 @@
                                 <a href="/" class="nav-link">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/men" class="nav-link">Men</a>
+                                <a href="/item" class="nav-link">Item</a>
                             </li>
                             <li class="nav-item">
                                 <a href="/tech" class="nav-link">Tech</a>
