--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -6,16 +6,16 @@
     <div class="page-section">
         <div class="container text-center">
             <h2 class="login"><b>로그인</b></h2>
-            <form action="">
+            <form th:action="@{/login}"   th:object="${loginForm}" method="post">
                 <div class="row mb-3">
                     <div class="col-sm-5 login-id">
-                        <input type="text" class="form-control" placeholder="아이디">
+                        <input type="text" th:field="*{userId}" class="form-control" placeholder="아이디">
                     </div>
                     <div class="col-sm-5 login-password">
-                        <input type="password" class="form-control" placeholder="비밀번호">
+                        <input type="password" th:field="*{userPasswd}"  class="form-control" placeholder="비밀번호">
                     </div>
                     <div class="col-sm-5 login-btn">
-                        <button class=" btn btn-primary btn-block">로그인하기</button>
+                        <button type="submit" class=" btn btn-primary btn-block">로그인하기</button>
                     </div>
                     <div class="col-sm-5 login-btn mt-4">
                         <p>SNS 계정 로그인하기</p>
