--- a/src/main/resources/templates/menu/product/product_detail.html
+++ b/src/main/resources/templates/menu/product/product_detail.html
@@ -42,13 +42,10 @@
                         </li>
                     </ul>
                     <div>
-                            <select class="col-lg-6 mb-3">
-                                <option value="">Size</option>
-                                <option value="size">S</option>
-                                <option value="size">M</option>
-                                <option value="size">L</option>
-                            </select>
-                        </div>
+                        <button type ="button" onclick="count('plus');">+</button>
+                        <input type="text" th:field="*{product.pdct_quantity}" value="0" readonly="readonly" style="text-align:center;"/>
+                        <button type="button" onclick="count('minus');">-</button>
+                    </div>
                         <button class="btn btn-primary">장바구니</button>
                         <button class="btn btn-outline">구매하기</button>
                     </div>
@@ -69,3 +66,25 @@
 
 </main>
 </html>
+<script>
+    function count(type){
+        const resultElement = document.getElementById('pdct_quantity');
+
+        let number = resultElement.value;
+
+
+        if(type === 'plus') {
+            number = parseInt(number) + 1;
+        }else if(type === 'minus'){
+            if(number < 1){
+                alert("0보다 작을수 없습니다.")
+            }
+            number = parseInt(number) - 1;
+        }
+
+        resultElement.value = number;
+
+
+    }
+
+</script>
