--- a/src/main/resources/templates/menu/product/product_detail.html
+++ b/src/main/resources/templates/menu/product/product_detail.html
@@ -43,11 +43,12 @@
                     </ul>
                     <div>
                         <button type ="button" onclick="count('plus');">+</button>
-                        <input type="text" th:field="*{product.pdct_quantity}" value="0" readonly="readonly" style="text-align:center;"/>
+                        <input type="text" id="pdct_quantity" th:name="*{product.pdct_quantity}" th:value="1" readonly="readonly" style="text-align:center;"/>
                         <button type="button" onclick="count('minus');">-</button>
                     </div>
                         <button class="btn btn-primary">장바구니</button>
                         <button class="btn btn-outline">구매하기</button>
+                        <a th:href="@{/item/} + ${product.getPdct_code} + @{/edit}"> 수정</a>
                     </div>
                 </div>
             </div>
@@ -76,10 +77,11 @@
         if(type === 'plus') {
             number = parseInt(number) + 1;
         }else if(type === 'minus'){
-            if(number < 1){
-                alert("0보다 작을수 없습니다.")
+            if(number < 2){
+                alert("1보다 작을수 없습니다.")
+            }else{
+                number = parseInt(number) - 1;
             }
-            number = parseInt(number) - 1;
         }
 
         resultElement.value = number;
