--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -33,8 +33,8 @@
 
                         <div class="ml-auto">
 
-                            <a href="/login" th:if="${#request.getCookies() == null}" class="btn btn-outline rounded-pill">로그인</a>
-                            <form th:action="@{/logout}" method="post" th:if="${#request.getCookies() != null}">
+                            <a href="/login" th:if="${session.loginUser == null }" class="btn btn-outline rounded-pill">로그인</a>
+                            <form th:action="@{/logout}" method="post" th:if="${session.loginUser != null}">
                                 <button type="submit"  class="btn btn-outline rounded-pill">로그아웃</button>
                             </form>
                         </div>
