--- a/src/main/resources/templates/menu/product/newitem.html
+++ b/src/main/resources/templates/menu/product/newitem.html
@@ -31,6 +31,9 @@
                         <input type="text" class="form-control" th:field="*{pdct_detail}" th:placeholder="상세설명" th:class="${#fields.hasErrors('pdct_detail')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_detail')}" th:errors="*{pdct_detail}">Incorrect date</p>
                     </div>
+                    <div class="col-sm-5 login-id">
+                        <input type="text" class="form-control" th:value="${session.loginUser.getUser_name()}" th:placeholder="판매자" readonly="true">
+                    </div>
                     <button class="btn btn-primary" type="submit">제출</button>
                 </div>
             </form>
