--- a/src/main/resources/templates/menu/product/newitem.html
+++ b/src/main/resources/templates/menu/product/newitem.html
@@ -32,7 +32,7 @@
                         <p th:if="${#fields.hasErrors('pdct_detail')}" th:errors="*{pdct_detail}">Incorrect date</p>
                     </div>
                     <div class="col-sm-5 login-id">
-                        <input type="text" class="form-control" th:value="${session.loginUser.getUser_name()}" th:placeholder="판매자" readonly="true">
+                        <input type="text" name="seller" class="form-control" th:value="${session.loginUser.getUser_name()}" th:placeholder="판매자" readonly="true">
                     </div>
                     <button class="btn btn-primary" type="submit">제출</button>
                 </div>
