주문 페이지

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -76,29 +76,42 @@
         <div class="divider mx-auto"></div>
       </div>
 
+
       <div class="row mt-5 text-center">
+
+        <div class="col-lg-4 py-3 wow fadeInUp">
+              <div class="display-3">
+                <img th:src="|/images/${product[0].getPdct_image()}|" width="350" alt="">
+              </div>
+              <div class="text-left">
+                 <a th:href="@{/item/{pdct_code}(pdct_code = ${product[0].getPdct_code()})}" th:text="${product[0].getPdct_name()}"></a>
+                 <p><b th:text="${product[0].getPdct_price()}"></b>원</p>
+                 <div class="freeShip">무료배송</div>
+              </div>
+        </div>
         <div class="col-lg-4 py-3 wow fadeInUp">
           <div class="display-3">
-            <img src="/img/product/vantaBlack.jpg" width="350" alt="">
+            <img th:src="|/images/${product[1].getPdct_image()}|" width="350" alt="">
           </div>
           <div class="text-left">
-            <h5 ><b><u>피스워커</u></b></h5>
-            <a href="" >vantaBlack/crop</a>
-            <p><b>23,000</b>원</p>
+            <a th:href="@{/item/{pdct_code}(pdct_code = ${product[1].getPdct_code()})}" th:text="${product[1].getPdct_name()}"></a>
+            <p><b th:text="${product[1].getPdct_price()}"></b>원</p>
             <div class="freeShip">무료배송</div>
           </div>
         </div>
         <div class="col-lg-4 py-3 wow fadeInUp">
-          <div class="display-3"><span class="mai-shapes"></span></div>
-          <h5>Friendly Prices</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, sit.</p>
+          <div class="display-3">
+            <img th:src="|/images/${product[2].getPdct_image()}|" width="350" alt="">
+          </div>
+          <div class="text-left">
+            <a th:href="@{/item/{pdct_code}(pdct_code = ${product[2].getPdct_code()})}" th:text="${product[2].getPdct_name()}"></a>
+            <p><b th:text="${product[2].getPdct_price()}"></b>원</p>
+            <div class="freeShip">무료배송</div>
+          </div>
         </div>
-        <div class="col-lg-4 py-3 wow fadeInUp">
-          <div class="display-3"><span class="mai-shapes"></span></div>
-          <h5>No time-confusing</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, sit.</p>
-        </div>
-      </div>
+
+     </div>
+
     </div> <!-- .container -->
   </div> <!-- .page-section -->
 
