--- a/src/main/resources/templates/menu/item.html
+++ b/src/main/resources/templates/menu/item.html
@@ -4,41 +4,26 @@
   <div class="page-section bg-light " style="margin-top: 90px;">
     <div class="container">
       <div class="owl-carousel wow fadeInUp" id="testimonials">
-        <div class="item">
-          <div class="row align-items-center">
-            <div class="col-md-6 py-3">
-              <div class="testi-image">
-                <img src="/img/product/vantaBlack.jpg" alt="" >
 
+        <div th:each="product:${items}">
+          <div class="item">
+            <div class="row align-items-center">
+              <div class="col-md-6 py-3">
+                <div class="testi-image">
+                  <img th:src="|/images/${product.getPdct_image()}|" alt="" >
+                </div>
               </div>
-            </div>
-            <div class="col-md-3 py-3">
-              <div class="testi-content">
-                <p>Necessitatibus ipsum magni accusantium consequatur delectus a repudiandae nemo quisquam dolorum itaque, tenetur, esse optio eveniet beatae explicabo sapiente quo.</p>
-                <div class="entry-footer">
-                  <strong>Melvin Platje</strong> &mdash; <span class="text-grey">CEO Slurin Group</span>
+              <div class="col-md-3 py-3">
+                <div class="testi-content">
+                  <p th:text="${product.getPdct_detail()}"></p>
+                  <div class="entry-footer">
+                    <strong th:text="${product.getPdct_name()}"></strong>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-
-        <div class="item">
-          <div class="row align-items-center">
-            <div class="col-md-6 py-3">
-              <div class="testi-image">
-                <img src="/img/person/person_2.jpg" alt="">
-              </div>
-            </div>
-            <div class="col-md-6 py-3">
-              <div class="testi-content">
-                <p>Repudiandae vero assumenda sequi labore ipsum eos ducimus provident a nam vitae et, dolorum temporibus inventore quaerat consectetur quos! Animi, qui ratione?</p>
-                <div class="entry-footer">
-                  <strong>George Burke</strong> &mdash; <span class="text-grey">CEO Letro</span>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
 
       </div>
@@ -61,7 +46,7 @@
               <img th:src="|/images/${product.getPdct_image}|" width="350" alt="">
             </div>
             <div class="text-left">
-              <h5 ><b><u>피스워커</u></b></h5>
+              <h5 ><b><u></u></b></h5>
               <a th:href="@{/item/} + ${product.getPdct_code()}" th:text="${product.getPdct_name()}">name</a>
               <p th:text="${product.getPdct_price()} + 원"></p>
               <div class="freeShip">무료배송</div>
